# DOCs

./: BDay-greetings  CD-burning  Dates.txt  EQ-info  Fake-User-Names  Happy-sale  LDAP-howto  LYRICS  NOTES-AJA  NOTES-ANSIBLE  NOTES-APC  NOTES-BMC  NOTES-CAPTURE  NOTES-CFEngine  NOTES-CISCO  NOTES-COBBLER  NOTES-COHESITY  NOTES-CUPS  NOTES-CVS  NOTES-DATABASES  NOTES-DB2  NOTES-DEADLINE  NOTES-DELL  NOTES-DNS  NOTES-DOCKER  NOTES-DR  NOTES-DTS  NOTES-DTS-LICENSE-MAYA  NOTES-DTV  NOTES-DTV-KICKSTART  NOTES-EDMUNDS  NOTES-EXIT  NOTES-GIT  NOTES-GIT~  NOTES-GPG  NOTES-H2N  NOTES-IDM-01849242  NOTES-IPA  NOTES-KVM-migration  NOTES-LDAP  (+55 more)
DOCx/: Bday-story-for-D.doc  BladeLogic-image-creation.docx  Cloud-Computing-Risks.docx  Configuring-and-Connecting-to-a-XEN-DomU-VNC-based-Virtual-Console.docx  Culliagan_Water_Systems.doc  DC-documentation.docx  DC-outline.docx  DanSiegfriedt.doc  LDAP-sudo.docx  LEFT.docx  Left.doc  Moral-statement.docx  Production+Engineering+-+Projects+-+DDoS.html  Quotes  RAID  SFTP_CONFIG.docx  SiegfriedtProposalRVSD1-07.doc  brazil_script.htm  chinname.pl.txt  interview_questions.txt  larry_s_lile-06-28-12.docx  mounting a vmdk on a new VM.docx  regex-test  search_terms  tat-trys.html
FORTUNES/: signatures-perl-part  signatures.txt
HTML/: Adding-a-Page-HOWTO.html  JAVA-bookmarks.html  Opinion_The_unspoken_truth_about_managing_geeks.html  Opinion_The_unspoken_truth_about_why_your_IT_sucks.html  runesright.html  siggy-runesright.html  tat-trys.html
KVM-Ron/: Newserver  XonTech-Systems-KVM-Virtualization.docx  XonTech_Systems_KVM_Virtualization.txt
LDAPBROWSER/: LdapBrowser.lnk  lbecacerts  pl1rad702.cfg
NETWORKING/: Configure-br-bond  DNS-documents  NOTES-bonding  NOTES-bonding-ORIG  OSI-TEXT  VLAN-2328-2428  simple-bonding-script.txt  tcpdump-notes
SCRIPTS/: Backup-commands  EIR-networking  FQMN  NO-spaces  NOTES  Newuser  POC-Denise.bash  PreProd-bonds-bridges  RDB-host-test  RH-test  RI-gateway-fix  Rons-link-script  SCRIPT-TEMPLATE  SSH-KEYGEN  STOROPS-access-netgroup-conf  STOROPS-sudoers  Shell+Scripting.html  add-cathy-plus-to-sudoers  backup-script  backup-snippets  blah  blorf  bonding-for-BL  bonding-for-BL-ORIG  burnin-test-script  christmas-tree.bash  crypt-test  cumlative-dir-size.bash  data-from-a-file  exclude-list  home-account-size  hosts-fix  info-backup-script  largest-UID.bash  length-test  look-loop  m4a2mp3.bash  mass-file-name-space-remove  mount-rapper  mozilla-fix  (+15 more)
SCRIPTS/CPP-CLASS/: Brief_OO.ppt  CPP-Project2.cpp  C_Review_UCLA.ppt  Class.ppt  DMA.ppt  Functions.ppt  IOSTREAM.ppt  Inheritance.ppt  P2-va-class.h  Polymorphism.ppt  Project2 assignment help.eml  Transition_to_CPP.ppt  VisualStudio.ppt
SCRIPTS/CPP-CLASS/PRIMER/ch02/: convert.cpp  getinfo.cpp  ourfunc.cpp  sqrt.cpp
SCRIPTS/CPP-CLASS/PRIMER/ch04/: arrayone.cpp
SCRIPTS/DSH/dsh-1.21/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  autogen.sh  config.h.in  configure  configure.in  dsh.spec  dsh.spec.in
SCRIPTS/DSH/dsh-1.21/dsh/: Makefile.am  Makefile.in  collective.c  collective.h  debug.c  debug.h  dsh.1.in  dsh.c  dsh.h  includes.h  print.c  print.h  proc.c  proc.h  queue.c  queue.h  resolv.c  resolv.h  usage.c  usage.h
SCRIPTS/DSH/dsh-1.21/dshbak/: Makefile.am  Makefile.in  dshbak.1.in  dshbak.pl
SCRIPTS/HOSTS/: host_list-siggy-24jun08-ORIG  host_list-siggy-24jun08-UNCLEANED  host_list-siggy-24jun08-sort-spaced  hosts-generator-siggy
SCRIPTS/LARRY/: ADTools.pm  LDAPTools.pm  README  Tools.pm  directory-sync.pl
SCRIPTS/NG/: Reboot-Servers  SUDO-STUFF  check-NOW.txt  nascheck.txt  node-err-chk.txt  node-fail-chk.txt  pbs-trim  search-suid.txt  servcheck.txt  time-sync  tools  uptimes.txt
SCRIPTS/NG/AutomaticShutdown/: PowerTower_Outlet.py  TempMonitor.py  free_nodes.py  getch.py.txt  queues.py  telnetlib.py
SCRIPTS/NG/CRON/: NOTES  pbs-trim-fix
SCRIPTS/NG/Mount Check/: Mod-Cron  Mount-check.py  automount_check.py  check_mount_raids  find-and-remount
SCRIPTS/NG/New_User_Stuff/: NewLocalUser.txt  NewPanfsUser.txt  NewRemoteUser.txt  NewUser
SCRIPTS/NG/PAM-change/: PAM-Mod  system-auth
SCRIPTS/NG/root/: SHUTDOWN-CIPRICO  SHUTDOWN-CIPRICO.txt  SHUTDOWN-MASTER.txt  SHUTDOWN-NODES.txt  SHUTDOWN-PANASAS.txt
SCRIPTS/NON-dd-dd/: NOTES  fdisk_hda.in  go
SCRIPTS/Shell+Scripting_files/: labels-javascript  main-action.css
SCRIPTS/script-class/: ascript  bscript  chkarg  del  exitscript  filetype  forloop  name  randy  showdir  ttime
SED/: SED-SITES  SED-email  all-in-one.txt  misc-sed.txt  sed-qref.txt  sed1line.txt
orb/: .htaccess  index.html
orb/books/java/: allsrch.htm  asrch.htm  copyrght.htm  credits.htm  esrch.htm  fsrch.htm  index.htm  jsrch.htm  lsrch.htm
orb/books/java/awt/: appa_01.htm  appa_02.htm  appa_03.htm  appb_01.htm  appc_01.htm  appc_02.htm  appd_01.htm  appd_02.htm  ch00_01.htm  ch00_02.htm  ch00_03.htm  ch00_04.htm  ch00_05.htm  ch00_06.htm  ch00_07.htm  ch00_08.htm  ch01_01.htm  ch01_02.htm  ch01_03.htm  ch01_04.htm  ch01_05.htm  ch01_06.htm  ch02_01.htm  ch02_02.htm  ch02_03.htm  ch02_04.htm  ch02_05.htm  ch02_06.htm  ch02_07.htm  ch02_08.htm  ch03_01.htm  ch03_02.htm  ch03_03.htm  ch03_04.htm  ch03_05.htm  ch03_06.htm  ch04_01.htm  ch04_02.htm  ch04_03.htm  ch05_01.htm  (+218 more)
orb/books/java/exp/: ch00_01.htm  ch00_02.htm  ch00_03.htm  ch00_04.htm  ch00_05.htm  ch00_06.htm  ch01_01.htm  ch01_02.htm  ch01_03.htm  ch01_04.htm  ch01_05.htm  ch01_06.htm  ch01_07.htm  ch01_08.htm  ch01_09.htm  ch01_10.htm  ch02_01.htm  ch02_02.htm  ch02_03.htm  ch02_04.htm  ch03_01.htm  ch03_02.htm  ch03_03.htm  ch03_04.htm  ch03_05.htm  ch04_01.htm  ch04_02.htm  ch04_03.htm  ch04_04.htm  ch04_05.htm  ch04_06.htm  ch05_01.htm  ch05_02.htm  ch05_03.htm  ch05_04.htm  ch05_05.htm  ch05_06.htm  ch05_07.htm  (+52 more)
orb/books/perl/: copyrght.htm  credits.htm  index.htm
orb/books/tcpip/: copyrght.htm  credits.htm  index.htm
orb/books/unix/: copyrght.htm  credits.htm  index.htm
orb/books/web/: copyrght.htm  credits.htm  index.htm
script_class/: ascript  bscript  chkarg  del  exitscript  forloop  mytype  name  prog1  randy  showdir  ttime
(+8676 files in other folders)
